docs: refresh CLAUDE.md and README.md after adversarial code-review pass
Both docs are revised to accurately describe what the codebase actually
contains, based on a thorough re-read of every Java file and lecture-notes
markdown. Key corrections applied to both files:

- JavaFX is required in three directories — lec00_jdk_install/, lec18_gui/,
  hw8/ — not just the latter two; lec00's JavaFXCheck.java is the verifier
- lec13_polymorphism/ is notes-only (no .java files); polymorphism is
  actually demonstrated in lec11_inheritance/Puppy.java (instanceof + cast)
  and GroomEverything.java (interface-typed array iteration)
- Phase 1 dropped "control flow" (which lives in lec06) and gained "strings"
  (lec03's actual content)
- Phase 2 expanded to cover number formatting, control flow, string equality,
  and 1D/2D/ragged/sparse arrays — all previously hidden under "I/O & iteration"
- Phase 3 (lec09) now mentions method overloading, the lecture's main point
- Phase 5 (lec11) now mentions constant interfaces (anti-pattern) and the
  equals(Object) override pattern, plus the uml.png class diagram
- hw4 now lists Fly alongside Frog/Pond (it was previously omitted)
- hw1-hw3 split into separate rows in README; hw3 explicitly described as
  purely procedural (no custom class)

CLAUDE.md-only additions:
- Conventions section now documents .vscode/java-formatter.xml style rules
  (brace placement, indent, line widths) so generated code respects them
- New "Known quirks" section warns that exam1/CourseExam1.java is
  intentionally incomplete scaffolding
- examX/ -> exam1/ in the repository structure (only one exam exists)
- Solution files clarified: only hw2, hw4, hw6 actually have *Sol.java

README.md changes:
- Full rewrite from 2-line stub to a public-facing landing page with
  topic-coverage table, homework summary table, repository layout, build
  instructions (incl. JavaFX module-path), and conventions

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>